[TASK-1] Fix style.css alignment <a>

--- a/andrew.mashin/task-1/style.css
+++ b/andrew.mashin/task-1/style.css
@@ -10,6 +10,7 @@ nav {
     align-items: center;
     height: 50px;
     margin-top: 10px;
+    overflow: hidden;
 }
 
 nav ul {
@@ -84,16 +85,17 @@ nav li:hover:nth-child(6) {
     }
 
     nav ul li {
+        display: flex;
         width: 100%;
-        height: 50px;
+        height: auto;
     }
 
     nav a {
-        display: block;
         -webkit-tap-highlight-color: transparent;
-        line-height: 50px;
+        height: 50px;
         width: 100%;
         color: white;
+        justify-content: center;
         text-align: center;
     }
 
